// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format apex: CommentsBeforeClassDeclaration.cls: CommentsBeforeClassDeclaration.cls 1`] = `
// First Test Comment

/**
* First ApexDoc
*/
class CommentsBeforeClassDeclaration {
  public CommentsBeforeClassDeclaration() {
    System.debug('SOMETHING');
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// First Test Comment

/**
 * First ApexDoc
 */
class CommentsBeforeClassDeclaration {
  public CommentsBeforeClassDeclaration() {
    System.debug('SOMETHING');
  }
}

`;

exports[`Format apex: CommentsBeforeEnumDeclaration.cls: CommentsBeforeEnumDeclaration.cls 1`] = `
// First Test Comment

/**
* First ApexDoc
*/
enum Season {WINTER, SPRING, SUMMER, FALL}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// First Test Comment

/**
 * First ApexDoc
 */
enum Season {
  WINTER,
  SPRING,
  SUMMER,
  FALL
}

`;

exports[`Format apex: CommentsBeforeInterfaceDeclaration.cls: CommentsBeforeInterfaceDeclaration.cls 1`] = `
// First Test Comment

/**
* First ApexDoc
*/
interface CommentsBeforeInterfaceDeclaration {

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// First Test Comment

/**
 * First ApexDoc
 */
interface CommentsBeforeInterfaceDeclaration {
}

`;

exports[`Format apex: CommentsBeforeTriggerDeclaration.cls: CommentsBeforeTriggerDeclaration.cls 1`] = `
// First Test Comment

/**
* First ApexDoc
*/
trigger Case_trg on Case(before update) {
  System.debug('SOMETHING');
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// First Test Comment

/**
 * First ApexDoc
 */
trigger Case_trg on Case(before update) {
  System.debug('SOMETHING');
}

`;
